RTD-256 rtl fix for select options to align items to the end on the right

--- a/src/assets/css/element-overrides/_select.scss
+++ b/src/assets/css/element-overrides/_select.scss
@@ -26,5 +26,5 @@ li.el-select-dropdown__item.hover, li.el-select-dropdown__item:hover {
 }
 
 .rtl .el-select-dropdown .el-select-dropdown__item {
-    @apply flex flex-row-reverse;
+    @apply flex flex-row-reverse justify-end;
 }
